istio-manifests/mtls.yml
# mTLS Strict mode ensures that all communications within the mesh are encrypted and authenticated.
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: mern-devops
spec:
  mtls:
    mode: STRICT
