istio-manifests/gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: mern-devops
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: virtualservice
  namespace: mern-devops
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /books
    route:
    - destination:
        host: backend-service 
        port:
          number: 8000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-service
        port:
          number: 5173
