istio-manifests/virtualService.yml
# The VirtualService defines the routing rules for the services within the mesh.
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: virtualservice
  namespace: mern-devops
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /books
    route:
    - destination:
        host: backend-service 
        port:
          number: 8000
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-service
        port:
          number: 5173
